--- a/configs/train.yaml
+++ b/configs/train.yaml
@@ -2,7 +2,8 @@ train:
   batch_size: 16
   num_epochs: 50
   n_splits: 5
-
+  threshold: 0.5
+  
   metric: "dice_coef"
   # accuracy / f1 / precision / recall / mse / dice_coef
   
@@ -29,6 +30,8 @@ train:
     evidence: 'loss'
     monitor: 'metric'
   
+
+
 model:
   name: "fcn_50"
   # fcn_50 / 
