--- a/configs/train.yaml
+++ b/configs/train.yaml
@@ -13,16 +13,19 @@ train:
   optimizer:
     name: "Adam"
     # Adam / SGD
-    weight_decay: 1.e-6
-    momentum: 0.9
-    learning_rate: 1.e-4
+    config:
+      weight_decay: 1.e-6
+      momentum: 0.9
+      learning_rate: 1.e-4
 
   lr_scheduler:
     name: "ReduceLROnPlateau"
-    factor: 0.1
-    patience: 20
-    min_lr: 1.e-6
-    monitor: 'metric'
+    monitor: "metric"
+    config:
+      factor: 0.1
+      patience: 20
+      min_lr: 1.e-6
+      verbose: True
 
   early_stopping:
     patience: 3
@@ -32,6 +35,7 @@ train:
 
 model:
   name: "fcn_50"
-  # fcn_50 / 
-  pretrained: True
+  # fcn_50 /
+  config:
+    pretrained: True
   
