✨ FEAT: val_step 마다 wandb log 찍기 (#43)
* val_step wandb logger

* val_step wandb logger

* ✨ FEAT:  val_step wandb logger 기록

* ✨ FEAT: wandb logger 기록

* ✨ FEAT: wandb logger

* ✨ FEAT: wandb

* ✨ FEAT: wandb logger

* 👽️ help

* ✨ FEAT: val_step 마다 wandb log 찍기

* 📝 DOCS: base.yaml val_step 변경

* 📝 DOCS: user_name 수정

--- a/configs/base.yaml
+++ b/configs/base.yaml
@@ -16,5 +16,5 @@ classes:  [
     'Triquetrum', 'Pisiform', 'Radius', 'Ulna' ]
 
 wandb:
-  user_name: "hg"
+  user_name: "" #본인 id 적기
   team_name: "dkvltmxhf-hotclip"
