♻️ ✨ FEAT/REFACTOR : smp Unet 모델 추가 + 모델 학습 결과 저장 경로 맞춰줌

--- a/configs/base.yaml
+++ b/configs/base.yaml
@@ -5,7 +5,7 @@ random_seed: 42
 device: "cuda"
 # cuda / cpu
 
-developer: "hg"
+developer: "kh"
 
 classes:  [
     'finger-1', 'finger-2', 'finger-3', 'finger-4', 'finger-5',
