--- a/configs/train.yaml
+++ b/configs/train.yaml
@@ -4,25 +4,30 @@ train:
   n_splits: 5
   threshold: 0.5
    
-  metric: "dice_coef"
+  metric: 
+    name: "dice_coef"
   # accuracy / f1 / precision / recall / mse / dice_coef
   
-  criterion: "BCEWithLogitsLoss"
+  criterion: 
+    name: "BCEWithLogitsLoss"
   # CrossEntropyLoss / BCEWithLogitsLoss
 
   optimizer:
     name: "Adam"
     # Adam / SGD
-    weight_decay: 1.e-6
-    momentum: 0.9
-    learning_rate: 1.e-4
+    config:
+      weight_decay: 1.e-6
+      # momentum: 0.9
+      lr: 1.e-4
 
   lr_scheduler:
     name: "ReduceLROnPlateau"
-    factor: 0.1
-    patience: 20
-    min_lr: 1.e-6
-    monitor: 'metric'
+    monitor: "metric"
+    config:
+      factor: 0.1
+      patience: 20
+      min_lr: 1.e-6
+      verbose: True
 
   early_stopping:
     patience: 3
@@ -31,7 +36,8 @@ train:
     monitor: 'metric'
 
 model:
-  name: "fcn_50"
-  # fcn_50 / 
-  pretrained: True
+  name: "smp_unet"
+  # fcn_50 /
+  config:
+    pretrained: True
   
