⚗️ EXP: Unet, adam, bce+dice

--- a/configs/train.yaml
+++ b/configs/train.yaml
@@ -9,8 +9,8 @@ train:
   # accuracy / f1 / precision / recall / mse / dice_coef
   
   criterion: 
-    name: "BCEWithLogitsLoss"
-  # CrossEntropyLoss / BCEWithLogitsLoss
+    name: "bce+dice"
+  # CrossEntropyLoss / BCEWithLogitsLoss / bce+dice
 
   optimizer:
     name: "Adam"
@@ -30,7 +30,7 @@ train:
       verbose: True
 
   early_stopping:
-    patience: 3
+    patience: 5
     min_delta: 0.001
     evidence: 'loss'
     monitor: 'metric'
