--- a/configs/train.yaml
+++ b/configs/train.yaml
@@ -1,13 +1,18 @@
 train:
   batch_size: 4
-  num_epochs: 100
+  num_epochs: 10
   n_splits: 5
   threshold: 0.5
    
   metric: 
     name: "dice_coef"
   # accuracy / f1 / precision / recall / mse / dice_coef
-  
+
+  # 이미 학습한 모델의 ckpt를 가지고 재학습 할 것인지 
+  resume: False
+  #어떤 ckpt로부터 재학습할 것인지
+  ckpt_path : ""
+
   criterion: 
     name: "BCEWithLogitsLoss"
   # CrossEntropyLoss / BCEWithLogitsLoss
@@ -36,7 +41,7 @@ train:
     monitor: 'metric'
 
 model:
-  name: "smp_unet"
+  name: "fcn_50"
   # fcn_50 /
   config:
     pretrained: True
