✨♻️ FEAT & REFACTOR: 코드 유지 보수 및 dev mode 추가 (#52)
* ✨ FEAT: 코드 유지 보수 및 개선 시작
Fixes #48

* ♻️ REFACTOR: base.yaml mode 제거 및 main.py argparse로 mode 받기, debugging용 모드 추가

* ♻️ REFACTOR: config를 저장할 때 output_dir를 실제 결과값 폴더 위치로 잡아줌

* ♻️ REFACTOR: .yaml에서 inference_path 제거, inference에 config 접근 key 값 변경

* ⚗️ EXP: Unet, adam, bce+dice

* ♻️  REFACTOR: augmentation.py 및 data.yaml REFACTOR

* 🐛 BUG: .yaml에 train aug 없을 떄 예외처리

* ✨ FEAT: dev mode(작은 데이터셋으로 테스팅) 추가, dev_train, dev_inference 지원

* ✨ FEAT: Default setting with new features

--- a/configs/train.yaml
+++ b/configs/train.yaml
@@ -14,8 +14,8 @@ train:
   ckpt_path : ""
 
   criterion: 
-    name: "BCEWithLogitsLoss"
-  # CrossEntropyLoss / BCEWithLogitsLoss
+    name: "bce+dice"
+  # CrossEntropyLoss / BCEWithLogitsLoss / bce+dice
 
   optimizer:
     name: "Adam"
@@ -35,7 +35,7 @@ train:
       verbose: True
 
   early_stopping:
-    patience: 3
+    patience: 5
     min_delta: 0.001
     evidence: 'loss'
     monitor: 'metric'
