--- a/.gitignore
+++ b/.gitignore
@@ -9,6 +9,7 @@
 **/*.png
 data/**/*.json
 wandb/*
+outputs/*.csv
 
 __pycache__/
 *.py[cod]
@@ -173,3 +174,9 @@ cython_debug/
 #.idea/
 
 data/meta_data.xlsx
+
+outputs/saved_models/**
+
+outputs/**
+
+.vscode/
