✨FEAT: Unet 구현 완료 (#54)
* ✨FEAT: Convblock 정의

* ✨FEAT: resnet34 encoder 부분 구현 완료

* ✨ FEAT: unet 구현 완

* ✨ FEAT: unet 작동 테스트 완료

--- a/configs/base.yaml
+++ b/configs/base.yaml
@@ -3,7 +3,7 @@ random_seed: 42
 device: "cuda"
 # cuda / cpu
 
-developer: "kh"
+developer: "hg"
 
 classes:  [
     'finger-1', 'finger-2', 'finger-3', 'finger-4', 'finger-5',
@@ -14,5 +14,5 @@ classes:  [
     'Triquetrum', 'Pisiform', 'Radius', 'Ulna' ]
 
 wandb:
-  user_name: "" #본인 id 적기
+  user_name: "hg" #본인 id 적기
   team_name: "dkvltmxhf-hotclip"
