--- a/configs/base.yaml
+++ b/configs/base.yaml
@@ -3,7 +3,7 @@ random_seed: 42
 device: "cuda"
 # cuda / cpu
 
-developer: "hg"
+developer: "kh"
 
 classes:  [
     'finger-1', 'finger-2', 'finger-3', 'finger-4', 'finger-5',
@@ -13,6 +13,10 @@ classes:  [
     'Trapezoid', 'Capitate', 'Hamate', 'Scaphoid', 'Lunate',
     'Triquetrum', 'Pisiform', 'Radius', 'Ulna' ]
 
+# wandb 사용을 원치 않으신다면 아래 wandb 부분을 다 주석 처리해주세요.
 wandb:
-  user_name: "hg" #본인 id 적기
-  team_name: "dkvltmxhf-hotclip"
+  user_name: "kh" #본인 id 적기
+  team_name: "dkvltmxhf-hotclip" # wandb 프로젝트 명, 변경 x
+  experiment: "" # 무슨 실험인지
+  
+  
