--- a/configs/train.yaml
+++ b/configs/train.yaml
@@ -1,6 +1,6 @@
 train:
   batch_size: 4
-  num_epochs: 10
+  num_epochs: 100
   n_splits: 5
   threshold: 0.5
    
@@ -14,8 +14,8 @@ train:
   ckpt_path : ""
 
   criterion: 
-    name: "bce+dice"
-  # CrossEntropyLoss / BCEWithLogitsLoss / bce+dice
+    name: "StructureLoss"
+  # CrossEntropyLoss / BCEWithLogitsLoss / bce+dice / StructureLoss(for SAM2-UNET)
 
   optimizer:
     name: "Adam"
@@ -30,7 +30,7 @@ train:
     monitor: "metric"
     config:
       factor: 0.1
-      patience: 20
+      patience: 15
       min_lr: 1.e-6
       verbose: True
 
@@ -41,7 +41,6 @@ train:
     monitor: 'metric'
 
 model:
-  #name: "myUnet"
   name: "fcn_50"
 
   # fcn_50 /
