✨ FEAT: SAM2-UNet 모델 Baseline에 이식 (#64)
* ⚗️ EXPERIMENT: SAM2-UNET 모델 Baseline에 이식

* ⚗️ EXPERIMENT: SAM2-UNET 모델 Baseline에 이식

* ⚗️ EXPERIMENT: SAM2-UNET 모델 Baseline에 이식

--- a/configs/train.yaml
+++ b/configs/train.yaml
@@ -1,5 +1,5 @@
 train:
-  num_epochs: 100
+  num_epochs: 10
   n_splits: 5
   threshold: 0.5
    
@@ -13,8 +13,8 @@ train:
   ckpt_path : ""
 
   criterion: 
-    name: "dice"
-  # CrossEntropyLoss / BCEWithLogitsLoss / bce+dice / dice
+    name: "StructureLoss"
+  # CrossEntropyLoss / BCEWithLogitsLoss / bce+dice / dice / StructureLoss(for SAM2-UNET)
 
   optimizer:
     name: "Adam"
@@ -41,7 +41,7 @@ train:
 
 model:
   #name: "myUnet"
-  name: "smp_unet"
+  name: "sam2unet_tiny"
 
   # fcn_50 /
   config:
