--- a/configs/base.yaml
+++ b/configs/base.yaml
@@ -3,7 +3,7 @@ random_seed: 42
 device: "cuda"
 # cuda / cpu
 
-developer: "kh"
+developer: "hk"
 
 classes:  [
     'finger-1', 'finger-2', 'finger-3', 'finger-4', 'finger-5',
@@ -15,6 +15,6 @@ classes:  [
 
 # wandb 사용을 원치 않으신다면 아래 wandb 부분을 다 주석 처리해주세요.
 wandb:
-  user_name: "kh" #본인 id 적기
+  user_name: "hyeonrl98" #본인 id 적기
   team_name: "dkvltmxhf-hotclip" # wandb 프로젝트 명, 변경 x
-  experiment: "" # 무슨 실험인지
+  experiment: "clipseg_dev" # 무슨 실험인지
