--- a/configs/train.yaml
+++ b/configs/train.yaml
@@ -1,5 +1,5 @@
 train:
-  num_epochs: 100
+  num_epochs: 10
   n_splits: 5
   threshold: 0.5
    
@@ -17,7 +17,7 @@ train:
     config:
       weight_decay: 1.e-6
       # momentum: 0.9
-      lr: 1.e-4
+      lr: 1.e-3
 
   lr_scheduler:
     name: "ReduceLROnPlateau"
@@ -35,7 +35,7 @@ train:
     monitor: 'metric'
 
 model:
-  name: "smp_unet++_resnet34"
+  name: "clipseg"
 
   # torchvision : fcn_50 / fcn_101 / deeplabv3_50 / deeplabv3_101 
 
