--- a/configs/train.yaml
+++ b/configs/train.yaml
@@ -35,7 +35,7 @@ train:
     monitor: 'metric'
 
 model:
-  name: "smp_unet++_resnet34"
+  name: "clipseg"
 
   # torchvision : fcn_50 / fcn_101 / deeplabv3_50 / deeplabv3_101 
 
