--- a/configs/train.yaml
+++ b/configs/train.yaml
@@ -1,5 +1,5 @@
 train:
-  num_epochs: 100
+  num_epochs: 150
   n_splits: 5
   threshold: 0.5
    
@@ -8,7 +8,7 @@ train:
   # accuracy / f1 / precision / recall / mse / dice_coef
 
   criterion: 
-    name: "bce+dice"
+    name: "bce"
   # CrossEntropy / bce / bce+dice / dice / StructureLoss(for SAM2-UNET) / focal+dice / unet3p
 
   optimizer:
@@ -17,19 +17,19 @@ train:
     config:
       weight_decay: 1.e-6
       # momentum: 0.9
-      lr: 1.e-4
+      lr: 1.e-3
 
   lr_scheduler:
     name: "ReduceLROnPlateau"
     monitor: "metric"
     config:
       factor: 0.1
-      patience: 20
+      patience: 10
       min_lr: 1.e-6
       verbose: True
 
   early_stopping:
-    patience: 10
+    patience: 20
     min_delta: 0.001
     evidence: 'loss'
     monitor: 'metric'
