✨ FEAT: text prompt "medical" 추가

--- a/src/models/clipseg/experiments/phrasecut.yaml
+++ b/src/models/clipseg/experiments/phrasecut.yaml
@@ -28,7 +28,7 @@ configuration:
 
   # general
   mix: False # <-----------------
-  prompt: shuffle+
+  prompt: medical
   norm_cond: True
   mix_text_min: 0.0
   
