--- a/configs/base.yaml
+++ b/configs/base.yaml
@@ -3,7 +3,7 @@ random_seed: 42
 device: "cuda"
 # cuda / cpu
 
-developer: "yh"
+developer: "hk"
 
 classes:  [
     'finger-1', 'finger-2', 'finger-3', 'finger-4', 'finger-5',
@@ -14,7 +14,7 @@ classes:  [
     'Triquetrum', 'Pisiform', 'Radius', 'Ulna' ]
 
 # wandb 사용을 원치 않으신다면 아래 wandb 부분을 다 주석 처리해주세요.
-# wandb:
-#   user_name: "yh" #본인 id 적기
-#   team_name: "dkvltmxhf-hotclip" # wandb 프로젝트 명, 변경 x
-#   experiment: "clipseg_dev" # 무슨 실험인지
+wandb:
+  user_name: "hyeonrl98" #본인 id 적기
+  team_name: "dkvltmxhf-hotclip" # wandb 프로젝트 명, 변경 x
+  experiment: "clipseg_dev" # 무슨 실험인지
