--- a/.gitignore
+++ b/.gitignore
@@ -10,6 +10,7 @@
 data/**/*.json
 wandb/*
 outputs/*.csv
+pretrained_models/*
 
 __pycache__/
 *.py[cod]
@@ -180,3 +181,7 @@ outputs/saved_models/**
 outputs/**
 
 .vscode/
+
+submission.csv
+
+beit3.spm
